--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,4 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-attrs==20.2.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-clickclick==20.10.2
-Flask==1.1.2
-idna==2.10
-inflection==0.5.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jsonschema==3.2.0
-MarkupSafe==1.1.1
-openapi-spec-validator==0.2.9
-pyrsistent==0.17.3
-PyYAML==5.3.1
+flask==1.1.2
+gunicorn==20.0.4
 requests==2.24.0
-RestrictedPython==5.1
-six==1.15.0
-urllib3==1.25.11
-Werkzeug==1.0.1
